--- a/ComputerCodeBlue.Csv/ComputerCodeBlue.Csv.csproj
+++ b/ComputerCodeBlue.Csv/ComputerCodeBlue.Csv.csproj
@@ -1,8 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>net8.0;net6.0;netstandard2.1</TargetFrameworks>
+
+    <!-- NuGet metadata -->
+    <PackageId>ComputerCodeBlue.Csv</PackageId>
+    <Version>1.0.2</Version> <!-- use SemVer -->
+    <Authors>Computer Code Blue LLC</Authors>
+    <Company>Computer Code Blue LLC</Company>
+    <Description>Convenient extension methods and helpers around CsvHelper.</Description>
+    <PackageTags>csv;csvhelper;io;extensions</PackageTags>
+    <RepositoryUrl>https://github.com/computercodeblue/ComputerCodeBlue.Csv</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageProjectUrl>https://github.com/computercodeblue/ComputerCodeBlue.Csv</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>icon.png</PackageIcon>
+
+    <!-- Build/pack -->
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+
+    <!-- Deterministic/source info -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <Deterministic>true</Deterministic>
     <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
